--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@t3-oss/env-nextjs": "^0.11.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.455.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
